--- a/media-queries/css/main.css
+++ b/media-queries/css/main.css
@@ -16,3 +16,34 @@ html {
     color: red;
 }
 
+@media only screen and (min-width: 30em) {
+    
+    .title {
+        color: green;
+        font-size: 10rem;
+    }
+    
+}
+
+@media only screen and (min-width: 50em) {
+
+    .title {
+        color: blue;
+    }
+    
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
